fix return button visibility

--- a/style.css
+++ b/style.css
@@ -187,7 +187,7 @@ h2 {
 
 .list__item--input {
   width: 100vw;
-  height: 100vh;
+  /* height: 100vh; */
 }
 
 .list__item h2 {
